build_err_utf8.txt
cargo : warning: `C:\Users\Administrator\.cargo\config` is deprecated in favor of `config.toml`
所在位置 行:1 字符: 1
+ cargo build -p view > build_err.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (warning: `C:\Us...f `config.toml`:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
note: if you need to support cargo 1.38 or earlier, you can symlink `config` to `config.toml`
warning: C:\Users\Administrator\RustroverProjects\canview\Cargo.toml: unused manifest key: workspace.edition
warning: C:\Users\Administrator\RustroverProjects\canview\Cargo.toml: unused manifest key: workspace.name
warning: C:\Users\Administrator\RustroverProjects\canview\Cargo.toml: unused manifest key: workspace.version
warning: variable does not need to be mutable
  --> src\parser\src\dbc.rs:57:13
   |
57 |         let mut value = if self.value_type == '-' {
   |             ----^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

warning: `parser` (lib) generated 1 warning (run `cargo fix --lib -p parser` to apply 1 suggestion)
warning: unused imports: `Compression`, `read::ZlibDecoder`, and `write::ZlibEncoder`
 --> src\blf\src\blf_core.rs:4:14
  |
4 | use flate2::{read::ZlibDecoder, write::ZlibEncoder, Compression};
  |              ^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `Read`
 --> src\blf\src\blf_core.rs:5:29
  |
5 | use std::io::{self, Cursor, Read, Write};
  |                             ^^^^

warning: unused import: `ObjectHeader`
 --> src\blf\src\file.rs:6:74
  |
6 |     BlfParser, BlfParseError, BlfParseResult, FileStatistics, LogObject, ObjectHeader,
  |                                                                          ^^^^^^^^^^^^

warning: unused import: `WriteBytesExt`
 --> src\blf\src\objects\log_container.rs:3:45
  |
3 | use byteorder::{LittleEndian, ReadBytesExt, WriteBytesExt};
  |                                             ^^^^^^^^^^^^^

warning: unused imports: `Write` and `self`
 --> src\blf\src\objects\log_container.rs:5:15
  |
5 | use std::io::{self, Cursor, Read, Write};
  |               ^^^^                ^^^^^

warning: ambiguous glob re-exports
  --> src\blf\src\objects\mod.rs:12:9
   |
12 | pub use can::*;
   |         ^^^^^^ the name `messages` in the type namespace is first re-exported here
13 | pub use lin::*;
   |         ------ but the name `messages` in the type namespace is also re-exported here
   |
   = note: `#[warn(ambiguous_glob_reexports)]` on by default

warning: unused import: `env_vars::*`
  --> src\blf\src\objects\mod.rs:17:9
   |
17 | pub use env_vars::*;
   |         ^^^^^^^^^^^

warning: constant `FILE_SIGNATURE` is never used
 --> src\blf\src\file_statistics.rs:7:7
  |
7 | const FILE_SIGNATURE: u32 = 0x47474F4C; // "LOGG"
  |       ^^^^^^^^^^^^^^
  |
  = note: `#[warn(dead_code)]` on by default

warning: method `write` is never used
  --> src\blf\src\objects\flexray\message.rs:53:19
   |
28 | impl FlexRayData {
   | ---------------- method in this implementation
...
53 |     pub(crate) fn write<W: Write>(&self, _writer: &mut W) -> BlfParseResult<()> {
   |                   ^^^^^

warning: method `write` is never used
   --> src\blf\src\objects\flexray\message.rs:108:19
    |
77  | impl FlexRayV6Message {
    | --------------------- method in this implementation
...
108 |     pub(crate) fn write<W: Write>(&self, _writer: &mut W) -> BlfParseResult<()> {
    |                   ^^^^^

warning: method `write` is never used
   --> src\blf\src\objects\flexray\message.rs:201:19
    |
154 | impl FlexRayVFrReceiveMsg {
    | ------------------------- method in this implementation
...
201 |     pub(crate) fn write<W: Write>(&self, _writer: &mut W) -> BlfParseResult<()> {
    |                   ^^^^^

warning: method `write` is never used
   --> src\blf\src\objects\flexray\message.rs:320:19
    |
257 | impl FlexRayVFrReceiveMsgEx {
    | --------------------------- method in this implementation
...
320 |     pub(crate) fn write<W: Write>(&self, _writer: &mut W) -> BlfParseResult<()> {
    |                   ^^^^^

warning: method `write` is never used
  --> src\blf\src\objects\flexray\status_events.rs:57:19
   |
30 | impl FlexRaySync {
   | ---------------- method in this implementation
...
57 |     pub(crate) fn write<W: Write>(&self, _writer: &mut W) -> BlfParseResult<()> {
   |                   ^^^^^

warning: method `write` is never used
  --> src\blf\src\objects\flexray\status_events.rs:99:19
   |
77 | impl FlexRayV6StartCycleEvent {
   | ----------------------------- method in this implementation
...
99 |     pub(crate) fn write<W: Write>(&self, _writer: &mut W) -> BlfParseResult<()> {
   |                   ^^^^^

warning: method `write` is never used
   --> src\blf\src\objects\flexray\status_events.rs:145:19
    |
123 | impl FlexRayStatusEvent {
    | ----------------------- method in this implementation
...
145 |     pub(crate) fn write<W: Write>(&self, _writer: &mut W) -> BlfParseResult<()> {
    |                   ^^^^^

warning: method `write` is never used
   --> src\blf\src\objects\flexray\status_events.rs:202:19
    |
173 | impl FlexRayVFrError {
    | -------------------- method in this implementation
...
202 |     pub(crate) fn write<W: Write>(&self, _writer: &mut W) -> BlfParseResult<()> {
    |                   ^^^^^

warning: method `write` is never used
   --> src\blf\src\objects\flexray\status_events.rs:268:19
    |
234 | impl FlexRayVFrStatus {
    | --------------------- method in this implementation
...
268 |     pub(crate) fn write<W: Write>(&self, _writer: &mut W) -> BlfParseResult<()> {
    |                   ^^^^^

warning: method `write` is never used
   --> src\blf\src\objects\flexray\status_events.rs:338:19
    |
302 | impl FlexRayVFrStartCycle {
    | ------------------------- method in this implementation
...
338 |     pub(crate) fn write<W: Write>(&self, _writer: &mut W) -> BlfParseResult<()> {
    |                   ^^^^^

warning: method `write` is never used
  --> src\blf\src\objects\ethernet\frame.rs:63:19
   |
32 | impl EthernetFrame {
   | ------------------ method in this implementation
...
63 |     pub(crate) fn write<W: Write>(&self, _writer: &mut W) -> BlfParseResult<()> {
   |                   ^^^^^

warning: method `write` is never used
  --> src\blf\src\objects\app_events\trigger.rs:37:19
   |
22 | impl AppTrigger {
   | --------------- method in this implementation
...
37 |     pub(crate) fn write<W: Write>(&self, _writer: &mut W) -> BlfParseResult<()> {
   |                   ^^^^^

warning: method `write` is never used
  --> src\blf\src\objects\app_events\comment_marker.rs:33:19
   |
18 | impl EventComment {
   | ----------------- method in this implementation
...
33 |     pub(crate) fn write<W: Write>(&self, _writer: &mut W) -> BlfParseResult<()> {
   |                   ^^^^^

warning: method `write` is never used
  --> src\blf\src\objects\app_events\comment_marker.rs:97:19
   |
59 | impl GlobalMarker {
   | ----------------- method in this implementation
...
97 |     pub(crate) fn write<W: Write>(&self, _writer: &mut W) -> BlfParseResult<()> {
   |                   ^^^^^

warning: `blf` (lib) generated 22 warnings (run `cargo fix --lib -p blf` to apply 6 suggestions)
   Compiling view v0.1.0 (C:\Users\Administrator\RustroverProjects\canview\src\view)
error[E0502]: cannot borrow `app_config` as immutable because it is also borrowed as mutable
   --> src\view\src\main.rs:620:51
    |
619 | ...                   app_config.write().mappings.push(ChannelMapping {
    |                       ------------------
    |                       |
    |                       mutable borrow occurs here
    |                       a temporary with access to the mutable borrow is created here ...
620 | ...                       channel: (app_config.read().mappings.len() + 1) as u16,
    |                                     ^^^^^^^^^^ immutable borrow occurs here
...
624 | ...                   });
    |                         - ... and the mutable borrow might be used here, when that temporary is dropped and runs the destr
uctor for type `dioxus::prelude::Write<'_, AppConfig>`

For more information about this error, try `rustc --explain E0502`.
error: could not compile `view` (bin "view") due to 1 previous error
